# NDNS

./: .gitignore  Audio.h  CMakeLists.txt  LICENSE  README.md  main.cpp  ndns.c
Sources/: Audio.cpp  Definitions.h  DirectConn.cpp  DirectConn.h  DirectConnHandlers.cpp  DirectTCP.cpp  NDNS.cpp  NDNS.h  NDNSCommands.cpp  NetworkSettings.cpp  SDLAudioManager.cpp  SDLAudioManager.h  Settings.cpp  Settings.h  SettingsFields.h  SoundProcessing.cpp  SoundProcessing.h  VCMassageHandler.cpp  VoiceClient.cpp  VoiceClient.h  VolumeSettings.cpp  main.cpp
